--- a/windows/pubspec.yaml
+++ b/windows/pubspec.yaml
@@ -1,6 +1,6 @@
 name: device_vendor_info_windows
 description: Windows implementation of hardware vendor information in Flutter.
-version: 0.1.0
+version: 0.1.1
 homepage: https://github.com/rk0cc/device_vendor_info
 repository: https://github.com/rk0cc/device_vendor_info/tree/main/windows
 environment: 
@@ -13,7 +13,7 @@ dependencies:
   win32_registry: ^1.1.2
   device_vendor_info_interface: ^1.0.0
   async: ^2.11.0
-  intl: ^0.18.0
+  intl: '>=0.18.0 <1.0.0'
 dev_dependencies:
   flutter_lints: ^3.0.1
 platforms:
