--- a/interface/pubspec.yaml
+++ b/interface/pubspec.yaml
@@ -1,6 +1,6 @@
 name: device_vendor_info_interface
 description: Provide standard interface of hardware vendor information in Flutter.
-version: 1.0.0
+version: 1.0.0+1
 homepage: https://github.com/rk0cc/device_vendor_info
 repository: https://github.com/rk0cc/device_vendor_info/tree/main/interface
 environment: 
@@ -14,4 +14,5 @@ dev_dependencies:
   flutter_lints: ^3.0.1
 platforms:
   linux:
+  macos:
   windows: 
