--- a/bundle/pubspec.yaml
+++ b/bundle/pubspec.yaml
@@ -10,9 +10,11 @@ dependencies:
     sdk: flutter
   meta: ^1.10.0
   device_vendor_info_interface: ^1.0.0+1
-  device_vendor_info_unix: ^0.1.0
+  device_vendor_info_unix: ^0.1.1
   device_vendor_info_windows: ^0.1.1
 dev_dependencies:
+  flutter_test:
+    sdk: flutter
   flutter_lints: ^3.0.1
 platforms:
   linux:
