--- a/.github/workflows/interface.yml
+++ b/.github/workflows/interface.yml
@@ -25,7 +25,7 @@ jobs:
         run: flutter pub get
       - name: Run build file
         working-directory: ${{ env.working-directory }}
-        run: dart run build_runner build
+        run: dart run build_runner build --delete-conflicting-outputs
       - name: Assign Git configurations
         run: |
           git config --local user.name "rk0cc"
