--- a/interface/pubspec.yaml
+++ b/interface/pubspec.yaml
@@ -1,6 +1,6 @@
 name: device_vendor_info_interface
 description: Provide standard interface of hardware vendor information in Flutter.
-version: 1.1.0
+version: 2.0.0
 homepage: https://github.com/rk0cc/device_vendor_info
 repository: https://github.com/rk0cc/device_vendor_info/tree/main/interface
 environment: 
@@ -12,6 +12,7 @@ dependencies:
   meta: ^1.10.0
   json_annotation: ^4.8.1
   intl: '>=0.18.0 <1.0.0'
+  async: ^2.11.0
 dev_dependencies:
   flutter_lints: ^3.0.1
   build_runner: ^2.4.8
