--- a/unix/pubspec.yaml
+++ b/unix/pubspec.yaml
@@ -1,6 +1,6 @@
 name: device_vendor_info_unix
 description: UNIX (including macOS and Linux) implementation of hardware vendor information in Flutter.
-version: 1.0.0-beta.1
+version: 1.0.0-beta.2
 homepage: https://github.com/rk0cc/device_vendor_info
 repository: https://github.com/rk0cc/device_vendor_info/tree/main/unix
 environment: 
@@ -10,11 +10,13 @@ dependencies:
   flutter:
     sdk: flutter
   meta: ^1.10.0
-  device_vendor_info_interface: ^2.0.0
+  device_vendor_info_interface: ^3.0.0
   async: ^2.11.0
   path: ^1.8.3
 dev_dependencies:
   flutter_lints: ^3.0.1
+device_vendor_info_interface:
+    path: "../interface"
 platforms:
   macos:
   linux:
