--- a/.github/workflows/interface.yml
+++ b/.github/workflows/interface.yml
@@ -7,11 +7,11 @@ on:
       - '.github/workflows/interface.yml'
       - 'interface/**.dart'
       - '!interface/**.g.dart'
+env:
+  working-directory: './interface'
 jobs:
   genfile:
     name: Generate file
-    env:
-      working-directory: './interface'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -47,3 +47,21 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: main
+  unit_test:
+    name: Unit test
+    runs-on: ubuntu-latest
+    needs:
+      - genfile
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          channel: stable
+      - name: Get dependencies
+        working-directory: ${{ env.working-directory }}
+        run: flutter pub get
+      - name: Execute test
+        working-directory: ${{ env.working-directory }}
+        run: flutter test
