--- a/.github/workflows/autogen.yml
+++ b/.github/workflows/autogen.yml
@@ -4,9 +4,9 @@ on:
     branches:
       - main
     paths:
-      - '.github/workflows/interface.yml'
-      - 'interface/**.dart'
-      - '!interface/**.g.dart'
+      - '.github/workflows/autogen.yml'
+      - 'interface/lib/src/info/*.dart'
+      - '!interface/lib/src/info/*.g.dart'
 env:
   working-directory: './interface'
 jobs:
@@ -47,21 +47,3 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: main
-  unit_test:
-    name: Unit test
-    runs-on: ubuntu-latest
-    needs:
-      - genfile
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Setup Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          channel: stable
-      - name: Get dependencies
-        working-directory: ${{ env.working-directory }}
-        run: flutter pub get
-      - name: Execute test
-        working-directory: ${{ env.working-directory }}
-        run: flutter test
