--- a/windows/pubspec.yaml
+++ b/windows/pubspec.yaml
@@ -11,11 +11,9 @@ dependencies:
     sdk: flutter
   meta: ^1.10.0
   win32_registry: ^1.1.2
-  device_vendor_info_interface: ^3.0.0
+  device_vendor_info_interface: ^4.0.0
+  async: ^2.11.0
 dev_dependencies:
   flutter_lints: ^3.0.1
-dependency_overrides:
-  device_vendor_info_interface:
-    path: "../interface"
 platforms:
   windows:
