--- a/.github/workflows/interface.yml
+++ b/.github/workflows/interface.yml
@@ -1,12 +1,12 @@
-name: Interface library actions
+name: Interface
 on:
   push:
     branches:
       - main
     paths:
-      - '.github/workflows/autogen.yml'
-      - 'interface/lib/src/info/*.dart'
-      - '!interface/lib/src/info/*.g.dart'
+      - '.github/workflows/interface.yml'
+      - 'interface/**/*.dart'
+      - '!interface/**/*.g.dart'
 env:
   working-directory: './interface'
 jobs:
@@ -34,7 +34,7 @@ jobs:
         id: difference
         working-directory: ${{ env.working-directory }}
         run: git diff --quiet
-        continue-on-error: true
+        continue-on-error: true # EXIT CODE 1 MEANS HAS DIFFERENCE
       - name: Add and commit generated files
         if: steps.difference.outcome == 'failure'
         working-directory: ${{ env.working-directory }}
@@ -47,3 +47,20 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: main
+  unit_test:
+    name: Unit test
+    runs-on: ubuntu-latest
+    needs: genfile
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          channel: stable
+      - name: Get dependencies
+        working-directory: ${{ env.working-directory }}
+        run: flutter pub get
+      - name: Execute test
+        working-directory: ${{ env.working-directory }}
+        run: flutter test
