--- a/windows/pubspec.yaml
+++ b/windows/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   win32_registry: ^1.1.2
   device_vendor_info_interface: ^5.0.0
   async: ^2.11.0
-  path: ^1.9.0
+  device_vendor_info_vmchecker: ^1.0.0
 dev_dependencies:
   flutter_lints: ">=3.0.1 <5.0.0"
 platforms:
