--- a/bundle/example/pubspec.yaml
+++ b/bundle/example/pubspec.yaml
@@ -1,16 +1,17 @@
 name: device_vendor_info_example
 description: "Demo Flutter application for fetching hardware informations"
 publish_to: 'none'
-version: 1.0.0
+version: 2.0.0
 environment:
-  sdk: '>=3.2.5 <4.0.0'
+  sdk: '>=3.3.0 <4.0.0'
 dependencies:
   flutter:
     sdk: flutter
   device_vendor_info:
     path: ../
   intl: ^0.19.0
+  device_vendor_info_vmchecker: ^1.0.0
 dev_dependencies:
-  flutter_lints: ^3.0.1
+  flutter_lints: ^4.0.0
 flutter:
   uses-material-design: true
