--- a/vmchecker/linux/CMakeLists.txt
+++ b/vmchecker/linux/CMakeLists.txt
@@ -4,7 +4,7 @@
 cmake_minimum_required(VERSION 3.10)
 
 # Project-level configuration.
-set(PROJECT_NAME "vmchecker")
+set(PROJECT_NAME "device_vendor_info_vmchecker")
 project(${PROJECT_NAME} LANGUAGES CXX)
 
 # Invoke the build for native code shared with the other target platforms.
@@ -14,9 +14,9 @@ add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/../src" "${CMAKE_CURRENT_BINARY_DI
 # List of absolute paths to libraries that should be bundled with the plugin.
 # This list could contain prebuilt libraries, or libraries created by an
 # external build triggered from this build file.
-set(vmchecker_bundled_libraries
+set(device_vendor_info_vmchecker_bundled_libraries
   # Defined in ../src/CMakeLists.txt.
   # This can be changed to accommodate different builds.
-  $<TARGET_FILE:vmchecker>
+  $<TARGET_FILE:device_vendor_info_vmchecker>
   PARENT_SCOPE
 )
