--- a/bundle/example/pubspec.yaml
+++ b/bundle/example/pubspec.yaml
@@ -3,14 +3,14 @@ description: "Demo Flutter application for fetching hardware informations"
 publish_to: 'none'
 version: 2.0.0
 environment:
-  sdk: '>=3.3.0 <4.0.0'
+  sdk: ^3.6.0
 dependencies:
   flutter:
     sdk: flutter
   device_vendor_info:
     path: ../
-  intl: ^0.19.0
+  intl: '>=0.20.0'
 dev_dependencies:
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 flutter:
   uses-material-design: true
