--- a/interface/pubspec.yaml
+++ b/interface/pubspec.yaml
@@ -1,24 +1,25 @@
 name: device_vendor_info_interface
 description: Provide standard interface of hardware vendor information in Flutter.
-version: 5.0.0
+version: 5.0.1
 homepage: https://github.com/rk0cc/device_vendor_info
 repository: https://github.com/rk0cc/device_vendor_info/tree/main/interface
 environment: 
-  sdk: '>=3.2.0 <4.0.0'
-  flutter: '>=3.16.0'
+  sdk: ^3.6.0
+  flutter: '>=3.27.0'
+resolution: workspace
 dependencies:
   flutter:
     sdk: flutter
-  meta: ^1.10.0
-  json_annotation: ^4.8.1
-  intl: '>=0.18.0 <1.0.0'
+  meta: ^1.15.0
+  json_annotation: ^4.9.0
+  intl: '>=0.20.0 <1.0.0'
   async: ^2.11.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ">=3.0.1 <6.0.0"
-  build_runner: ^2.4.8
-  json_serializable: ^6.7.1
+  flutter_lints: ^5.0.0
+  build_runner: ^2.4.14
+  json_serializable: ^6.9.2
   enough_convert:
     git:
       url: https://github.com/rk0cc/enough_convert.git
