--- a/unix/pubspec.yaml
+++ b/unix/pubspec.yaml
@@ -1,21 +1,22 @@
 name: device_vendor_info_unix
 description: UNIX (including macOS and Linux) implementation of hardware vendor information in Flutter.
-version: 2.0.1
+version: 2.0.2
 homepage: https://github.com/rk0cc/device_vendor_info
 repository: https://github.com/rk0cc/device_vendor_info/tree/main/unix
 environment: 
-  sdk: '>=3.3.0 <4.0.0'
-  flutter: '>=3.19.0'
+  sdk: ^3.6.0
+  flutter: '>=3.27.0'
+resolution: workspace
 dependencies:
   flutter:
     sdk: flutter
-  meta: ^1.10.0
-  device_vendor_info_interface: ^5.0.0
+  meta: ^1.15.0
+  device_vendor_info_interface: ^5.0.1
   async: ^2.11.0
   path: ^1.9.0
-  device_vendor_info_vmchecker: ^1.0.1
+  device_vendor_info_vmchecker: ^1.0.3
 dev_dependencies:
-  flutter_lints: ">=3.0.1 <6.0.0"
+  flutter_lints: ^5.0.0
 platforms:
   macos:
   linux:
