--- a/windows/pubspec.yaml
+++ b/windows/pubspec.yaml
@@ -1,20 +1,21 @@
 name: device_vendor_info_windows
 description: Windows implementation of hardware vendor information in Flutter.
-version: 2.0.1
+version: 2.0.2
 homepage: https://github.com/rk0cc/device_vendor_info
 repository: https://github.com/rk0cc/device_vendor_info/tree/main/windows
 environment: 
-  sdk: '>=3.3.0 <4.0.0'
-  flutter: '>=3.16.0'
+  sdk: ^3.6.0
+  flutter: '>=3.27.0'
+resolution: workspace
 dependencies:
   flutter:
     sdk: flutter
-  meta: ^1.10.0
-  win32_registry: ^1.1.2
-  device_vendor_info_interface: ^5.0.0
+  meta: ^1.15.0
+  win32_registry: ^1.1.5
+  device_vendor_info_interface: ^5.0.1
   async: ^2.11.0
-  device_vendor_info_vmchecker: ^1.0.1
+  device_vendor_info_vmchecker: ^1.0.3
 dev_dependencies:
-  flutter_lints: ">=3.0.1 <6.0.0"
+  flutter_lints: ^5.0.0
 platforms:
   windows:
