--- a/windows/pubspec.yaml
+++ b/windows/pubspec.yaml
@@ -1,6 +1,6 @@
 name: device_vendor_info_windows
 description: Windows implementation of hardware vendor information in Flutter.
-version: 2.0.2
+version: 2.0.2+1
 homepage: https://github.com/rk0cc/device_vendor_info
 repository: https://github.com/rk0cc/device_vendor_info/tree/main/windows
 environment: 
