--- a/bundle/pubspec.yaml
+++ b/bundle/pubspec.yaml
@@ -1,6 +1,6 @@
 name: device_vendor_info
 description: Get hardware information (BIOS, Motherboard and System) into Flutter platform.
-version: 2.0.4+1
+version: 2.1.0
 homepage: https://github.com/rk0cc/device_vendor_info
 funding:
   - https://github.com/sponsors/rk0cc
@@ -9,20 +9,20 @@ topics:
   - device
   - bios
 environment: 
-  sdk: ^3.6.0
-  flutter: '>=3.27.0'
+  sdk: ^3.8.0
+  flutter: '>=3.35.0'
 resolution: workspace
 dependencies:
   flutter:
     sdk: flutter
   meta: ^1.15.0
-  device_vendor_info_interface: ^5.0.1
-  device_vendor_info_unix: ^2.0.2
-  device_vendor_info_windows: ^2.0.2+1
+  device_vendor_info_interface: ^5.1.0
+  device_vendor_info_unix: ^2.1.0
+  device_vendor_info_windows: ^2.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 platforms:
   linux:
   macos:
