--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,16 +1,16 @@
 name: device_vendor_info_example
 description: "Demo Flutter application for fetching hardware informations"
 publish_to: 'none'
-version: 2.0.0
+version: 2.1.0
+resolution: workspace
 environment:
-  sdk: ^3.6.0
+  sdk: ^3.8.0
 dependencies:
   flutter:
     sdk: flutter
-  device_vendor_info:
-    path: ../
+  device_vendor_info: ^2.1.0
   intl: '>=0.20.0'
 dev_dependencies:
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 flutter:
   uses-material-design: true
