--- a/windows/pubspec.yaml
+++ b/windows/pubspec.yaml
@@ -1,21 +1,21 @@
 name: device_vendor_info_windows
 description: Windows implementation of hardware vendor information in Flutter.
-version: 2.0.2+1
+version: 2.1.0
 homepage: https://github.com/rk0cc/device_vendor_info
 repository: https://github.com/rk0cc/device_vendor_info/tree/main/windows
 environment: 
-  sdk: ^3.6.0
-  flutter: '>=3.27.0'
+  sdk: ^3.8.0
+  flutter: '>=3.35.0'
 resolution: workspace
 dependencies:
   flutter:
     sdk: flutter
   meta: ^1.15.0
-  win32_registry: ^1.1.5
-  device_vendor_info_interface: ^5.0.1
-  async: ^2.11.0
-  device_vendor_info_vmchecker: ^1.0.3
+  win32_registry: ^2.1.0
+  device_vendor_info_interface: ^5.1.0
+  async: ^2.13.0
+  device_vendor_info_vmchecker: ^1.1.0
 dev_dependencies:
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 platforms:
   windows:
