--- a/vmchecker/pubspec.yaml
+++ b/vmchecker/pubspec.yaml
@@ -1,11 +1,11 @@
 name: device_vendor_info_vmchecker
 description: Virtual platform detection plugin for device_vendor_info packages
-version: 1.2.0
+version: 1.2.0+1
 homepage: https://github.com/rk0cc/device_vendor_info
 repository: https://github.com/rk0cc/device_vendor_info/tree/main/vmchecker
 environment:
   sdk: ^3.8.0
-  flutter: '>=3.35.0'
+  flutter: '>=3.32.0'
 resolution: workspace
 dependencies:
   flutter:
