--- a/bundle/pubspec.yaml
+++ b/bundle/pubspec.yaml
@@ -1,6 +1,6 @@
 name: device_vendor_info
 description: Get hardware information (BIOS, Motherboard and System) into Flutter platform.
-version: 2.1.0
+version: 2.1.0+1
 homepage: https://github.com/rk0cc/device_vendor_info
 funding:
   - https://github.com/sponsors/rk0cc
@@ -10,15 +10,15 @@ topics:
   - bios
 environment: 
   sdk: ^3.8.0
-  flutter: '>=3.35.0'
+  flutter: '>=3.32.0'
 resolution: workspace
 dependencies:
   flutter:
     sdk: flutter
   meta: ^1.15.0
-  device_vendor_info_interface: ^5.1.0
-  device_vendor_info_unix: ^2.1.0
-  device_vendor_info_windows: ^2.1.0
+  device_vendor_info_interface: ^5.1.0+1
+  device_vendor_info_unix: ^2.1.0+1
+  device_vendor_info_windows: ^2.1.0+1
 dev_dependencies:
   flutter_test:
     sdk: flutter
