--- a/windows/pubspec.yaml
+++ b/windows/pubspec.yaml
@@ -1,20 +1,20 @@
 name: device_vendor_info_windows
 description: Windows implementation of hardware vendor information in Flutter.
-version: 2.1.0
+version: 2.1.0+1
 homepage: https://github.com/rk0cc/device_vendor_info
 repository: https://github.com/rk0cc/device_vendor_info/tree/main/windows
 environment: 
   sdk: ^3.8.0
-  flutter: '>=3.35.0'
+  flutter: '>=3.32.0'
 resolution: workspace
 dependencies:
   flutter:
     sdk: flutter
   meta: ^1.15.0
   win32_registry: ^2.1.0
-  device_vendor_info_interface: ^5.1.0
+  device_vendor_info_interface: ^5.1.0+1
   async: ^2.13.0
-  device_vendor_info_vmchecker: ^1.1.0
+  device_vendor_info_vmchecker: ^1.2.0+1
 dev_dependencies:
   flutter_lints: ^6.0.0
 platforms:
